2011-07-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* internal documentation of main, input

2011-07-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* display external node windows on double click or shift
	  click

2011-07-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* improve current node positioning

2011-07-06  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix resize behaviour of node windows
	* add message label with some status information

2011-06-14  Hendrik Tews <prooftree@askra.de>

	* release version 0.4 on 2011-06-14 11:26:01 UTC

2011-06-14  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-06-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* another release fix

2011-06-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* small release fix

2011-06-08  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2011-06-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update coq version number in README's

2011-05-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* color cheated commands/branches in red

2011-05-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* clone button

2011-05-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update existentials in external windows

2011-05-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* external node windows on mouse button 2
	* window titles

2011-05-26  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* prooftree toolbar and menu entry (emacs lisp only)

2011-05-26  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* start prooftree in the middle of a proof (just
	  emacs-lisp changes)
	* kill proof tree window from emacs
	* let windows survive bulk undo's and change their state accordingly

2011-05-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* clear sequent window when undoing the selected proof command

2011-04-21  Hendrik Tews <prooftree@askra.de>

	* release version 0.3 on 2011-04-21 14:43:35 UTC

2011-04-21  Hendrik Tews <prooftree@askra.de>

	* make-bundle fix
