@@ -7,6 +7,25 @@
  ! - <P></P></LI>
  ! - </UL>
   -->
+<DT>XXXX-XX-XX
+<DD>
+<UL>
+<LI>User interface changes
+    <UL>
+    <LI><P>extra sequent and proof command windows on double click
+        and shift click</P>
+    </LI>
+    <LI><P>progress message between <KBD>Dismiss</KBD> and
+           <KBD>Clone buttons</KBD>
+        </P></LI>
+    <LI><P>move proof tree by dragging with mouse button 1</P></LI>
+    </UL>
+</LI>
+<LI>several fixes
+<P></P></LI>
+<LI>
+<P></P></LI>
+</UL>
 <DT>2011-06-14
 <DD>
 <UL>
