@@ -1,3 +1,7 @@
+2011-07-13  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* move proof tree by dragging with mouse 1
+
 2011-07-12  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* internal documentation of main, input
